# GRA_Longevity

./: README.md  pyproject.toml  requirements.txt
config/: chaotic_immune.yaml  cyclic_circadian.yaml  hybrid_longevity.yaml  static_homeostasis.yaml
data/: aging_biomarkers.csv
docs/: api.md  theory.md
experiments/: analyze_results.py  run_trial.py
notebooks/: longevity_demo.ipynb
src/: __init__.py  core.py  geroprotector.py  in_silico_exp.py  multiverse.py  training.py  verification.py  virtual_patient.py
tests/: test_core.py
